--- a/Landing Page/style.css
+++ b/Landing Page/style.css
@@ -72,7 +72,7 @@ body {
     color: #fff;
     border: none;
     padding: 15px 30px;
-    border-radius: 50%;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 18px;
 }
